# hyperskill-tic-tac-toe-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/stage1/: project.py
src/stage2/: project.py
src/stage3/: hw1.py  hw2.py
tests/stage2/: test_project.py
tests/stage3/: test_hw1.py  test_hw2.py
