[tool.poetry]
name = "hyperskill-tic-tac-toe-python"
version = "0.1.0"
description = "Tic-Tac-Toe Python project from Hyperskill"
authors = ["Pavel Karateev <lancelote.du.lac@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.942"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
reorder-python-imports = "^3.0.1"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
